--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -13,15 +13,14 @@ security:
               users:
                 admin: { password: af6c4bb9c4c90a8f02b00c8bb7aa4591b79267d8, roles: 'ROLE_ADMIN' }
                 
-        administrators:
-            entity: { class: BecoolMainBundle:User }
+        users:
+            entity: { class: Becool\Bundle\MainBundle\Entity\User, property: "username" }
             
     encoders:
-        Becool\MainBundle\Entity\User:
+        Becool\Bundle\MainBundle\Entity\User:
             algorithm:        sha1
             encode_as_base64: false
             iterations:       1
-            
         Symfony\Component\Security\Core\User\User:
             algorithm:        sha1
             encode_as_base64: false
@@ -33,7 +32,7 @@ security:
             anonymous: true    
         admin_area:
             pattern:    ^/admin
-            provider: in_memory
+            provider: users
             form_login:
                 login_path: /login
                 check_path: /admin/login_check
